# mitch

./: .gitignore  README.md  messaging.md
examples/: README.md  example.c  example.go  example.java  example.mq4  example.py  example.rs  example.ts
ids/: README.md  asset-classes.csv  commodities.csv  crypto-assets.csv  currencies.csv  currency-ids.csv  indices.csv  instrument-types.csv  market-provider-ids.csv  market-providers.csv  stock-ids.csv  stocks.csv  tokens.csv
impl/: mitch.rs  mitch.ts
impl/mql4/: mitch.mq4
impl/rust/: Cargo.toml  build_lib.sh  dump.rdb
impl/rust/examples/: MitchMT4.mqh
impl/rust/scripts/: setup-redis-benchmark.sh  validate-setup.sh
impl/rust/src/: common.rs  constants.rs  header.rs  index.rs  lib.rs  market_providers.rs  networking.rs  order.rs  order_book.rs  tick.rs  ticker.rs  trade.rs  utils.rs
impl/rust/src/benchmarks/: consumers.rs  metrics.rs  mod.rs  producers.rs  webtransport_server.rs
impl/rust/src/ffi/: mod.rs  mt4.rs
impl/rust/src/networking/: macros.rs  redis.rs  webtransport.rs  webtransport_server.rs  webtransport_singleton.rs
impl/rust/src/utils/: format.rs  similarity.rs
impl/rust/tests/: constants_test.rs  format_test.rs  header_test.rs  index_test.rs  lib_test.rs  mod.rs  networking.rs  order_book_test.rs  order_test.rs  redis_pubsub_complete_integrity_test.rs  redis_pubsub_integrity_test.rs  redis_pubsub_test.rs  similarity_test.rs  tick_test.rs  ticker_test.rs  trade_test.rs
model/: README.md  asset.md  index.md  messaging.md  model.go  model.h  model.java  model.mq4  model.py  model.rs  model.ts  order-book.md  order.md  overview.md  tick.md  ticker.md  trade.md
